--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     </head>
     <body>
 
+        <div class="box hour">
+            ?
+        </div>
+        <div class="box min">
+            ?
+        </div>
+        <div class="box sec">
+            ?
+        </div>
+
         <main>
             <div class="clock clock-container">
-
+                
             </div>
         </main>
         <script src="file.js"></script>
