feat: add date/month/year

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
         
-
         <main>
+
             <div class="clock clock-container">
                 
             </div>
+                <p class="day">Pritam</p>
         </main>
         <script src="file.js"></script>
     </body>
