style: added footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                 
             </div>
                 <p class="day">Pritam</p>
+                <br>
+                <footer>
+                    <p>Code by Pritam</p>
+                </footer>
         </main>
         <script src="file.js"></script>
     </body>
+   
 </html>
